# compiled-hybrid-lm

./: .gitignore  AGENTS.md  CARTRIDGE_ARCHITECTURE.md  CHANGELOG.md  DEEPSEEK_LOG.md  Dockerfile.sandbox  HOW_TO_REPORT_RESULTS.md  HYBRID_STRATEGY.md  INFRASTRUCTURE.md  MANUAL.md  PRODUCT_SPEC.md  README.md  ZEROQ_INTEGRATION.md  __init__.py  active_sparse_retrieval.py  assistant_eval.py  async_routing_fused.py  build_cmi_features.py  build_code_dataset.py  build_v3_priors.py  cache_c4.py  cache_datasets.py  chat_cartridge.py  chat_cmi_v8000.py  chat_fused.py  chat_gpt2.py  chat_production_assistant.sh  chatbot.py  cmi-chat.service  cmi_v8000_demo.py  coding_gaps.md  compile_wiki_lm_v11.py  compile_wiki_lm_v12.py  compile_wiki_lm_v13.py  compile_wiki_lm_v15.py  compile_wiki_lm_v16.py  compile_wiki_lm_v17.py  compile_wiki_lm_v26.py  compile_wiki_lm_v27.py  compile_wiki_lm_v30.py  (+41 more)
archive/: _verify_blender.py  c4_train_remote.py  capability_pipeline.py  chat.sh  chat_bpe8000.py  compile_gpt2_compiled_channels.py  dump_gpt2_channels_v3.py  generate.py  generate_compiled_feature_transformer.py  generate_gpt2.py  generate_gpt2_blend.py  generate_hybrid.py  superposition_steerer_v2.py  train_c4_batched.py  train_compiled_feature_transformer_gpt2.py  train_gpt2_neural_lm.py  train_gpt2_neural_lm_geiger.py  train_honest_neural_lm.py  train_hybrid_bpe8000.py  train_steerer.py  train_steerer_bpe8000.py  train_steerer_builder.py  train_steerer_streaming.py  train_steerer_v2.py  train_steerer_v3.py
benchmarks/: arc.py  arc_prompts.py  arc_rack_router.py  arc_reports.py  (+2 more)
(+481 files in other folders)
