[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "compiled-hybrid-lm"
version = "0.1.0"
description = "Compiled Modular Intelligence — activation superposition steering cartridges for domain-specialized language models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "CMI Research"}]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "transformers>=4.30",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
gpu = ["bitsandbytes>=0.41"]
data = ["datasets>=4.8"]
dev = ["pytest>=7.0", "nltk>=3.8"]

[project.urls]
Repository = "https://github.com/org/cmi-steering"
